# consensus-clone

./: .env  .env.example  .gitignore  answer.json  answer.json.bak  pyproject.toml  requirements.txt  tmp_test.py  tmp_test.py.bak
data/indices/bm25/: papers.jsonl  tokens.jsonl
data/processed/: openalex_creatine_fulltext.jsonl  openalex_creatine_oa.jsonl  openalex_creatine_oa_fulltext.jsonl  papers_sample.jsonl  tmp_oa.jsonl
scripts/: build_bm25_index.py  debug_reranker.py  dev_smoke_test.py  fetch_oa_fulltext.py  fetch_openalex_sample.py  run_eval.py  test_online_retrieval.py
src/ai_consensus_clone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ai_consensus_clone/app/api/: deps.py  main.py  utf8_json.py
src/ai_consensus_clone/app/api/routes/: answer.py  papers.py  search.py
src/ai_consensus_clone/app/api/schemas/: answer.py  search.py
src/ai_consensus_clone/app/ui/: streamlit_app.py
src/ai_consensus_clone/core/config/: settings.py
src/ai_consensus_clone/core/domain/: paper.py
src/ai_consensus_clone/core/enrichment/: fetch_pdf.py  fetch_pmc.py  fetch_pubmed.py  fulltext.py  fulltext_service.py  models.py  normalize.py  quality.py
src/ai_consensus_clone/core/evaluation/: datasets.py  metrics.py
src/ai_consensus_clone/core/ranking/: reranker.py
src/ai_consensus_clone/core/reasoning/: aggregation.py  answer.py  evidence_extractor.py  llm_client.py  presentation.py  prompt_loader.py  stance_classifier.py
src/ai_consensus_clone/core/retrieval/: bm25.py  filters.py  online.py
src/ai_consensus_clone/utils/: text.py  text.py.bak
(+3 files in other folders)
